aggiunto '1' in funzione splice

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <input v-model='userInput' @keyup.enter='pushInputInList' placeholder="Compila la tua lista">
 
-      <button @click='pushInputInList' >Aggiungi alla tua lista</button>
+      <button @click='pushInputInList' >AGGIUNGI</button>
 
     </div>
 
